writen test cases for git and gdrive services